--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -115,6 +115,7 @@ a{
     width: 100%;
     height: 100%;
     justify-content: center;
+    align-items: center;
 }
 .headmid, .mid2-head{
    text-align: center;
@@ -123,7 +124,7 @@ a{
    border-bottom: 10px solid #f8d16c;
    width: fit-content;
    justify-self: center;
-   margin-left: 92vh;
+    margin-left: 44%;
 }
 .image{
     background-image: url(project.png);
@@ -131,7 +132,7 @@ a{
     height: 30vh;
     width: 51.5vh;
     margin-top: 1%;
-    margin-left: 77vh;
+    margin-left: 37%;
 }
 .projects{
     display: flex;
