--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,7 +13,7 @@ a{
 .nav-head{
     background-color: rgb(252, 251, 249)  ;
     box-shadow: rgb(255, 254, 254);
-    width: 100%;
+    width: 100vw;
     height: 75px;
     display:flex;
     position: fixed;
@@ -24,9 +24,9 @@ a{
     background-image: url(imglogo.png);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 4%;
-    height: 50%;
-    margin:1% 5% 3%;
+    width: 43px;
+    height: 35px;
+    margin:1% 5% 2%;
     justify-self: flex-start;
 }
 .nav_buttons{
@@ -37,7 +37,8 @@ a{
     justify-self: flex-end;
     margin-right: 10%;
     font-size: 17px;
-    font-family: "Noto Sans KR";
+    font-family: "Noto Sans KR"; 
+    /* font-family: "TypoPRO-BebasNeue"; */
 }
 .options{
     margin: 10%;
@@ -58,16 +59,16 @@ a{
     
 }
 .text{
-      margin-left: 10%;
+    margin-left: 10%;
 }
 .heading1 {
     color:#f8d16c;
-    font-size: 13vh;
-    margin-top: 25%;
-    
-    
+    font-size: 10vh;
+    margin-top: 25%;  
+    font-family: 'Playfair Display', serif; 
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 50%, transparent 50%, transparent 100%); 
 }
-.a1{
+/* .a1{
     position: absolute;
     top:160px;
     width:25%;
@@ -80,12 +81,14 @@ a{
     width:19%;
     height: 13%;
     background-color: rgba(252, 251, 250, 0.20);
-}
+} */
 
 .heading2{
     color:#f8d16c;
-    font-size: 13vh;
-    margin-top: 3%;
+    font-size: 10vh;
+    margin-top: 6%;
+    font-family: 'Playfair Display', serif;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 40%, rgba(255, 255, 255, 0.2) 40%, transparent 40%, transparent 100%);
 }
 .para{
     color: white;
@@ -94,28 +97,32 @@ a{
     margin-right: 5%;
     font-size: 20px;
     line-height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .right-fr{
     width:50%;
     height: 100%;
     background-color: #f8d16c ;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
 }
 .extra{
-    align-self: center;
+    /* align-self: center; */
+    margin: 30% 10% 20% 15%;
 }
 .back{
-    height: 50%;
-    width:70%;
-    margin: 27% 10% 20% 15%;   
+    width:100%;
+    height: auto;
+    /* margin: 27% 10% 20% 15%;    */
     
 }
 .middle{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
 }
 .headmid, .mid2-head{
    text-align: center;
@@ -123,25 +130,31 @@ a{
    font-size: 7vh;
    border-bottom: 10px solid #f8d16c;
    width: fit-content;
-   justify-self: center;
-    margin-left: 44%;
+   align-self: center;
+    /* margin-left: 43vw;
+    margin-right: 40vw; */
+    font-family: 'Playfair Display', serif;
+    font-weight: 50;
 }
 .image{
     background-image: url(project.png);
     background-size: cover;
-    height: 30vh;
     width: 51.5vh;
+    height: 30vh;
     margin-top: 1%;
-    margin-left: 37%;
+    /* margin-left: 37vw; */
 }
 .projects{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 2%;
 }
 .pro{
     width: 50vh;
     height:100%;
-    margin: 10%;
+    margin: 5%;
+    margin-bottom: 20%;
     font-size: 80px;
 }
 .numb{
@@ -151,30 +164,35 @@ a{
     font-size: 200%;
     color:#f8d16c ;
     z-index: -10;
+    
 }
 .pro_head{
     text-align: right;
     margin-right: 10%;
     font-size: 25px;
     color: black;
+    font-family: 'Playfair Display', serif;
 }
 .pro_info{
     text-align: right;
     margin-right: 10%;
     margin-left: 5%;
     margin-top: 8%;
-    font-size: 15px;
-    color: rgb(148, 146, 146);
+    font-size: 14px;
+    color: #999999;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
  
 }
 .mid_button, .btn{
     text-align: center;
-    margin-top: 2%;
+    margin-top: 4%;
     margin-bottom: 2%;
     border: 2px solid black;
     width: fit-content;
-    margin-left: 47%;
-    padding: 10px;
+    /* margin-left: 47%; */
+    padding: 10.5px 21px;
+    font-family: "Noto Sans KR"; 
 }
 .mid_button:hover, .btn:hover{
     background-color: #f8d16c;
@@ -184,50 +202,83 @@ a{
     margin-top: 0%;
 }
 .mid2-head{
-    margin-left: 99vh;
+    /* margin-left: 40vw; */
+    font-family: 'Playfair Display', serif;
+    
 }
 .mid_2{
     width: 100%;
-    height: 63vh;
-    background-color: rgb(240, 236, 236);
+    height: 100%;
+    background-color: rgb(223, 222, 222);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .blogimg{
     width:70%;
     align-self: center;
     margin-left: 10%;
 }
-.mid2_image{
+/* /* .mid2_image{
     width: 50%;
-}
+} */
 .mid2_info{
-    width: 40%;
-    margin-top: 10%;
-    font-size: 1.25em;
-    text-align: center;
-    
+    /* width: 40%;*/
+    /* margin-top: 5%; */
+    font-size: 1.1em;
+    text-align: center;  
+    color: #000000DE;
+    font-family: Arial, Helvetica, sans-serif; 
 }
-.sections{
+.sections {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 20px auto;
 }
+.column {
+      flex-basis: 50%;
+      max-width: 50%;
+}
+@media screen and (max-width: 750px) {
+    .column {
+        flex-basis: 90%;
+        max-width: 90%;
+        margin-top: 5%;
+    }
+}
+/* .sections{
+    display: flex;
+    flex-wrap: wrap;
+} */ 
 .abt_info{
     display: flex;
     flex-wrap: wrap;
     background-color: #293b52;
 }
-.contUs{
-    width: 49%;
-    margin: 2%;
+.contUs, .about{
+    width: 40%;
+    margin: 5%;
+    font-size: 14px;
+    /* text-indent: 20px; */
+    color: rgb(231, 228, 228);
+    line-height: 20px;
+    font-family: Arial, Helvetica, sans-serif; 
 }
 h2{
     color: white;
     margin-bottom: 5%;
+    font-family: "Noto Sans KR"; 
+    font-size: 21px;
 }
-.about{
+/* .about{
     width: 40%;
-    margin: 2%;
+    margin: 5%;
     color: rgb(231, 228, 228);
-}
+    line-height: 20px;
+    font-family: Arial, Helvetica, sans-serif; 
+} */
 footer{
     background-color: #1c2838;
     color: white;
