blog page complete1

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Playfair+Display:wght@600&display=swap");
-
+/* font-family: 'Bebas Neue', cursive;
+font-family: 'Playfair Display', serif; 
+font-family: 'Lato', sans-serif; */
 *{
     margin: 0%;
 }
 a{
     text-decoration: none;
+    text-decoration-color: black;
 }
 .container{
     margin:0%
@@ -47,6 +50,9 @@ a{
 }
 .options{
     margin: 15%;
+}
+.options:hover{
+    color:#828385 ;
 }
 .burger{
     display: none;
@@ -142,7 +148,7 @@ a{
         background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 30%, rgba(255, 255, 255, 0.2) 30%, transparent 30%, transparent 100%);
     } 
     .para{
-        font-size: 2.5vw;
+        font-size: 3vw;
     }
 }
 .extra{
@@ -242,6 +248,7 @@ a{
 
 .btn{
     margin-top: 0%;
+    text-decoration-color: black;
 }
 /* .mid2-head::after{
     color: rgb(90, 89, 89);
@@ -291,6 +298,9 @@ a{
     .middle{
         width:100% ;
     }
+    .btn{
+        font-size: 3vw;
+    }
 }
 @media screen and (max-width: 1000px) {
     .pro{
@@ -326,6 +336,9 @@ a{
     }
     .footer{
         text-indent: 100vw;
+    }
+    .icon{
+        margin-top: 4%;
     }
 }
 h2{
