--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -1,3 +1,6 @@
+/* font-family: 'Bebas Neue', cursive;
+font-family: 'Playfair Display', serif; 
+font-family: 'Lato', sans-serif; */
 *{
     margin: 0%;
 }
@@ -53,11 +56,15 @@ a{
     align-items: center;
     justify-self: flex-end;
     margin-right: 10%;
-    font-size: 17px;
-    font-family: "Noto Sans KR";
+    font-size: 20px;
+    font-family: 'Bebas Neue', cursive;
 }
 .options{
-    margin: 10%;
+    margin: 15%;
+}
+.options:hover{
+    border-bottom:2px solid black;
+    color: rgb(77, 75, 75);
 }
 @media screen and (max-width: 750px) {
     .options{
@@ -80,7 +87,7 @@ a{
 .blogs{
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
     /* position: absolute;
     top:35px;
     left:0; */
@@ -97,7 +104,8 @@ a{
     border: 1px solid gainsboro; 
     width: 60vh;
     min-width: 25vw;
-    box-shadow:0px 2px rgba(220, 220, 220, 0.486);
+    font-family: 'Lato', sans-serif;
+    box-shadow:0px 2px rgba(220, 220, 220, 0.247);
 }
 .blog:hover{
     transform: translateY(-10px);
@@ -128,7 +136,7 @@ a{
     background-image: url("https://cdn-images-1.medium.com/max/1024/1*2soSYXqsaPzpTZ97FGOsEQ.png");
 }
 .bhead{
-    border-bottom:1px solid gainsboro;
+    border-bottom:1px solid rgba(220, 220, 220, 0.322);
     font-size: 20px;
     /* font-weight: bold; */
     font-family: Arial, Helvetica, sans-serif; 
@@ -140,33 +148,50 @@ a{
     display: flex;
     justify-content: space-between;
     color: rgb(190, 189, 189);
-    padding: 1%;
+    padding: 3%;
     
 }
 .unksym{
-    /* background-color: rgba(70, 63, 63, 0.884); */
-    height: 50px;
-    width: 100%;
-    /* position:fixed;    
-    bottom:0px; */
+    text-align: center;
+    margin: 20px;
+}
+.unksym i{
+    color: black;
+    font-size: 25px;
+}
+.unksym i:hover{
+    color: rgba(0, 0, 0, 0.582);
 }
 footer{
-    /* position: fixed;
-    bottom: 0px; */
-    align-self: flex-end;
-    justify-self: flex-end;
-    height: 20px;
+    /* padding: 10px; */
     width: 100%;
     background-color: #1c2838; 
     color: ghostwhite;
+    text-indent: 45px;
+    height: 40px;
+    align-items:baseline;
+    justify-items: center;
 }
-.bottom{
-    align-self: flex-end;
-    justify-self: flex-end;
+.xxx{
+    padding-top: 10px;
 }
-@media screen and (max-width: 650px) {
+/* .bottom{
+    /* align-self: flex-end;
+    justify-self: flex-end; */
+    /* align-items: center; 
+} */
+@media screen and (max-width: 730px) {
     .blog{
         width:90%;
         margin:2%;
     }
+    .icon{
+        margin-top: 3%;
+    }
 }
+/* @media screen and (max-width: 1500px) {
+    .blog{
+        width:43%;
+        margin:2%;
+    }
+} */
