--- a/CSS/style_font.css
+++ b/CSS/style_font.css
@@ -6,10 +6,11 @@ font-family: 'Lato', sans-serif; */
 *{
     margin: 0%;
 }
-a{
+a, a:link , a:visited , a:hover ,a:active{
     text-decoration: none;
     text-decoration-color: black;
 }
+
 .container{
     margin:0%
 }
@@ -42,9 +43,8 @@ a{
     align-items: center;
     justify-self: flex-end;
     margin-right: 12%;
-    font-size: 20px;
+    font-size: 1.3em;
     color: #263146;
-    font-weight:0;
     font-family: 'Bebas Neue', cursive;
     /* font-family: "TypoPRO-BebasNeue"; */
 }
@@ -76,7 +76,7 @@ a{
 }
 .heading1 {
     color:#f8d16c;
-    font-size: 5vw;
+    font-size: 4em;
     margin-top: 25vh;  
     font-family: 'Playfair Display', serif; 
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 50%, transparent 50%, transparent 100%); 
@@ -98,7 +98,7 @@ a{
 
 .heading2{
     color:#f8d16c;
-    font-size: 5vw;
+    font-size: 4em;
     margin-top: 6%;
     font-family: 'Playfair Display', serif;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 40%, rgba(255, 255, 255, 0.2) 40%, transparent 40%, transparent 100%);
@@ -108,7 +108,7 @@ a{
     margin-top: 7%;
     text-align: left;
     margin-right: 5%;
-    font-size: 1.5vw;
+    font-size: 1.3em;
     line-height: 7vh;
     font-family: 'Lato', sans-serif;
 }
@@ -119,7 +119,7 @@ a{
     /* align-items: center;
     justify-content: center; */
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 800px) {
     .right-fr , .options{
         display: none;
     }
@@ -139,16 +139,22 @@ a{
         margin: 4%;
     }
     .heading1{
-        font-size: 7vh;
+        font-size: 3em;
         margin-top: 30vh;
         background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 40%, rgba(255, 255, 255, 0.2) 40%, transparent 40%, transparent 100%);
     }
     .heading2{
-        font-size: 7vh;
+        font-size: 3em;
         background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 30%, rgba(255, 255, 255, 0.2) 30%, transparent 30%, transparent 100%);
     } 
     .para{
-        font-size: 3vw;
+        font-size: 1em;
+    }
+    .mid2_info{
+        font-size: 0.8em;
+    }
+    .headmid, .mid2-head{
+        font-size: 1em;
     }
 }
 .extra{
@@ -172,7 +178,7 @@ a{
 .headmid, .mid2-head{
    text-align: center;
    color:rgb(90, 89, 89);
-   font-size: 6vh;
+   font-size: 2.5em;
    border-bottom: 7px solid #f8d16c;
    width:fit-content;
    align-self: center;
@@ -202,7 +208,7 @@ a{
     height:100%;
     margin: 5%;
     margin-bottom: 20%;
-    font-size: 80px;
+    font-size: 5em;
 }
 .numb{
     display: inline;
@@ -240,12 +246,17 @@ a{
     /* margin-left: 47%; */
     padding: 10px 21px;
     font-family: 'Bebas Neue', cursive;
-    font-size: 3.5vh;
+    font-size: 1.3em;
 }
 .mid_button:hover, .btn:hover{
     background-color: #f8d16c;
 }
-
+.mid_2_btn a:link {
+    color:black ;
+}
+.mid_2_btn a:visited {
+    color:black ;
+}
 .btn{
     margin-top: 0%;
     text-decoration-color: black;
@@ -273,7 +284,7 @@ a{
     /* width: 40%;*/
     /* margin-top: 5%; */
     font-size: 1.1em;
-    line-height: 23px;
+    line-height: 30px;
     text-align: center;  
     color: #000000DE;
     font-family: 'Lato', sans-serif; 
@@ -289,7 +300,7 @@ a{
       flex-basis: 50%;
       max-width: 50%;
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1100px) {
     .column {
         flex-basis: 90%;
         max-width: 90%;
@@ -301,12 +312,13 @@ a{
     .btn{
         font-size: 3vw;
     }
+    
 }
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
     .pro{
         width:40vw;
     }
-}
+} */
 /* .sections{
     display: flex;
     flex-wrap: wrap;
@@ -327,7 +339,7 @@ a{
     line-height: 25px;
     font-family: 'Lato', sans-serif;
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1100px) {
     .contUs, .about{
         flex-basis: 90%;
         max-width: 90%;
@@ -340,7 +352,7 @@ a{
 
     } */
     .icon{
-        margin-top: 4%;
+        margin-top: 20px;
     }
 }
 h2{
