--- a/blog_grid.css
+++ b/blog_grid.css
@@ -11,12 +11,14 @@ a{
     margin:0%;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
     /* border:10px solid black; */
 }
 #id1{
     margin:0%;
     display: flex;
     flex-direction: column;
+    min-height: 90vh;
     /* border:2px solid black; */
 }
 /* .container, {
