--- a/CSS/style_font.css
+++ b/CSS/style_font.css
@@ -10,9 +10,13 @@ a, a:link , a:visited , a:hover ,a:active{
     text-decoration: none;
     text-decoration-color: black;
 }
-
+.correct{
+    min-height: 100vh;
+    /* border: 10px solid black; */
+}
 .container{
-    margin:0%
+    margin:0%;
+    min-height: 100vh;
 }
 .nav-head{
     background-color: rgb(252, 251, 249) ;
@@ -267,6 +271,7 @@ a, a:link , a:visited , a:hover ,a:active{
 .mid_2{
     width: 100%;
     height: 100%;
+    min-height: 50vh;
     background-color: rgb(236, 234, 234);
     display: flex;
     flex-direction: column;
@@ -334,6 +339,7 @@ a, a:link , a:visited , a:hover ,a:active{
     flex-wrap: wrap-reverse;
     background-color: #293b52;
     padding:0 5vw ;
+    min-height: 50vh;
 }
 .contUs, .about{
     width: 40%;
