--- a/CSS/style_font.css
+++ b/CSS/style_font.css
@@ -11,7 +11,7 @@ a, a:link , a:visited , a:hover ,a:active{
     text-decoration-color: black;
 }
 .correct{
-    min-height: 100vh;
+    min-height: 100vh !important;
     /* border: 10px solid black; */
 }
 .container{
@@ -271,7 +271,7 @@ a, a:link , a:visited , a:hover ,a:active{
 .mid_2{
     width: 100%;
     height: 100%;
-    min-height: 50vh;
+    min-height: 50vh !important;
     background-color: rgb(236, 234, 234);
     display: flex;
     flex-direction: column;
@@ -339,7 +339,7 @@ a, a:link , a:visited , a:hover ,a:active{
     flex-wrap: wrap-reverse;
     background-color: #293b52;
     padding:0 5vw ;
-    min-height: 50vh;
+    min-height: 50vh !important;
 }
 .contUs, .about{
     width: 40%;
